@@ -6933,6 +6933,136 @@ $Monitoring::GLPlugin::SNMP::mibs_and_oids = {
     ospfAreaLsaCountNumber => '1.3.6.1.2.1.14.20.1.3',
   },
   'S5-CHASSIS-MIB' => {
+    s5ChasGen => '1.3.6.1.4.1.45.1.6.3.1',
+    s5ChasType => '1.3.6.1.4.1.45.1.6.3.1.1',
+    s5ChasDescr => '1.3.6.1.4.1.45.1.6.3.1.2',
+    s5ChasLocation => '1.3.6.1.4.1.45.1.6.3.1.3',
+    s5ChasContact => '1.3.6.1.4.1.45.1.6.3.1.4',
+    s5ChasVer => '1.3.6.1.4.1.45.1.6.3.1.5',
+    s5ChasSerNum => '1.3.6.1.4.1.45.1.6.3.1.6',
+    s5ChasGblPhysChngs => '1.3.6.1.4.1.45.1.6.3.1.7',
+    s5ChasGblPhysLstChng => '1.3.6.1.4.1.45.1.6.3.1.8',
+    s5ChasGblAttChngs => '1.3.6.1.4.1.45.1.6.3.1.9',
+    s5ChasGblAttLstChng => '1.3.6.1.4.1.45.1.6.3.1.10',
+    s5ChasGblConfChngs => '1.3.6.1.4.1.45.1.6.3.1.11',
+    s5ChasGblConfLstChng => '1.3.6.1.4.1.45.1.6.3.1.12',
+    s5ChasGrp => '1.3.6.1.4.1.45.1.6.3.2',
+    s5ChasGrpTable => '1.3.6.1.4.1.45.1.6.3.2.1',
+    s5ChasGrpEntry => '1.3.6.1.4.1.45.1.6.3.2.1.1',
+    s5ChasGrpIndx => '1.3.6.1.4.1.45.1.6.3.2.1.1.1',
+    s5ChasGrpType => '1.3.6.1.4.1.45.1.6.3.2.1.1.2',
+    s5ChasGrpDescr => '1.3.6.1.4.1.45.1.6.3.2.1.1.3',
+    s5ChasGrpMaxEnts => '1.3.6.1.4.1.45.1.6.3.2.1.1.4',
+    s5ChasGrpNumEnts => '1.3.6.1.4.1.45.1.6.3.2.1.1.5',
+    s5ChasGrpPhysChngs => '1.3.6.1.4.1.45.1.6.3.2.1.1.6',
+    s5ChasGrpPhysLstChng => '1.3.6.1.4.1.45.1.6.3.2.1.1.7',
+    s5ChasGrpEncodeFactor => '1.3.6.1.4.1.45.1.6.3.2.1.1.8',
+    s5ChasCom => '1.3.6.1.4.1.45.1.6.3.3',
+    s5ChasComTable => '1.3.6.1.4.1.45.1.6.3.3.1',
+    s5ChasComEntry => '1.3.6.1.4.1.45.1.6.3.3.1.1',
+    s5ChasComGrpIndx => '1.3.6.1.4.1.45.1.6.3.3.1.1.1',
+    s5ChasComIndx => '1.3.6.1.4.1.45.1.6.3.3.1.1.2',
+    s5ChasComSubIndx => '1.3.6.1.4.1.45.1.6.3.3.1.1.3',
+    s5ChasComType => '1.3.6.1.4.1.45.1.6.3.3.1.1.4',
+    s5ChasComDescr => '1.3.6.1.4.1.45.1.6.3.3.1.1.5',
+    s5ChasComVer => '1.3.6.1.4.1.45.1.6.3.3.1.1.6',
+    s5ChasComSerNum => '1.3.6.1.4.1.45.1.6.3.3.1.1.7',
+    s5ChasComLstChng => '1.3.6.1.4.1.45.1.6.3.3.1.1.8',
+    s5ChasComAdminState => '1.3.6.1.4.1.45.1.6.3.3.1.1.9',
+    s5ChasComAdminStateDefinition => {
+      6 => 'test',
+      4 => 'enable',
+      5 => 'reset',
+      1 => 'other',
+      2 => 'notAvail',
+      3 => 'disable',
+    },
+    s5ChasComOperState => '1.3.6.1.4.1.45.1.6.3.3.1.1.10',
+    s5ChasComOperStateDefinition => {
+      7 => 'testing',
+      4 => 'disabled',
+      10 => 'fatalErr',
+      5 => 'normal',
+      12 => 'obsoleted',
+      11 => 'notConfig',
+      6 => 'resetInProg',
+      9 => 'nonFatalErr',
+      1 => 'other',
+      3 => 'removed',
+      8 => 'warning',
+      2 => 'notAvail',
+    },
+    s5ChasComMaxSubs => '1.3.6.1.4.1.45.1.6.3.3.1.1.11',
+    s5ChasComNumSubs => '1.3.6.1.4.1.45.1.6.3.3.1.1.12',
+    s5ChasComRelPos => '1.3.6.1.4.1.45.1.6.3.3.1.1.13',
+    s5ChasComLocation => '1.3.6.1.4.1.45.1.6.3.3.1.1.14',
+    s5ChasComGroupMap => '1.3.6.1.4.1.45.1.6.3.3.1.1.15',
+    s5ChasComBaseNumPorts => '1.3.6.1.4.1.45.1.6.3.3.1.1.16',
+    s5ChasComTotalNumPorts => '1.3.6.1.4.1.45.1.6.3.3.1.1.17',
+    s5ChasComIpAddress => '1.3.6.1.4.1.45.1.6.3.3.1.1.18',
+    s5ChasBrd => '1.3.6.1.4.1.45.1.6.3.4',
+    s5ChasBrdTable => '1.3.6.1.4.1.45.1.6.3.4.1',
+    s5ChasBrdEntry => '1.3.6.1.4.1.45.1.6.3.4.1.1',
+    s5ChasBrdIndx => '1.3.6.1.4.1.45.1.6.3.4.1.1.1',
+    s5ChasBrdLeds => '1.3.6.1.4.1.45.1.6.3.4.1.1.2',
+    s5ChasBrdNumAtt => '1.3.6.1.4.1.45.1.6.3.4.1.1.3',
+    s5ChasBrdAttChngs => '1.3.6.1.4.1.45.1.6.3.4.1.1.4',
+    s5ChasBrdAttLstChng => '1.3.6.1.4.1.45.1.6.3.4.1.1.5',
+    s5ChasBrdStatusDsply => '1.3.6.1.4.1.45.1.6.3.4.1.1.6',
+    s5ChasBrdDateCode => '1.3.6.1.4.1.45.1.6.3.4.1.1.7',
+    s5ChasBrdCfgSrc => '1.3.6.1.4.1.45.1.6.3.4.1.1.8',
+    s5ChasBrdCfgSrcDefinition => {
+      8 => 'smBrdCfg',
+      7 => 'smPrmMem',
+      6 => 'smDfltJmpr',
+      5 => 'sm',
+      1 => 'other',
+      4 => 'brdCfg',
+      3 => 'prmMem',
+      2 => 'dfltJmpr',
+    },
+    s5ChasBrdCfgChngs => '1.3.6.1.4.1.45.1.6.3.4.1.1.9',
+    s5ChasAttTable => '1.3.6.1.4.1.45.1.6.3.4.2',
+    s5ChasAttEntry => '1.3.6.1.4.1.45.1.6.3.4.2.1',
+    s5ChasAttBrdIndx => '1.3.6.1.4.1.45.1.6.3.4.2.1.1',
+    s5ChasAttIndx => '1.3.6.1.4.1.45.1.6.3.4.2.1.2',
+    s5ChasAttDfltAtt => '1.3.6.1.4.1.45.1.6.3.4.2.1.3',
+    s5ChasAttCurAtt => '1.3.6.1.4.1.45.1.6.3.4.2.1.4',
+    s5ChasAttChngs => '1.3.6.1.4.1.45.1.6.3.4.2.1.5',
+    s5ChasAttLstChng => '1.3.6.1.4.1.45.1.6.3.4.2.1.6',
+    s5ChasAttClusterConnCapability => '1.3.6.1.4.1.45.1.6.3.4.2.1.7',
+    s5ChasLocChanTable => '1.3.6.1.4.1.45.1.6.3.4.3',
+    s5ChasLocChanEntry => '1.3.6.1.4.1.45.1.6.3.4.3.1',
+    s5ChasLocChanBrdIndx => '1.3.6.1.4.1.45.1.6.3.4.3.1.1',
+    s5ChasLocChanIndx => '1.3.6.1.4.1.45.1.6.3.4.3.1.2',
+    s5ChasLocChanBkplMode => '1.3.6.1.4.1.45.1.6.3.4.3.1.3',
+    s5ChasLocChanBkplModeDefinition => {
+      2 => 'connected',
+      1 => 'other',
+      3 => 'notConnected',
+    },
+    s5ChasStore => '1.3.6.1.4.1.45.1.6.3.5',
+    s5ChasStoreTable => '1.3.6.1.4.1.45.1.6.3.5.1',
+    s5ChasStoreEntry => '1.3.6.1.4.1.45.1.6.3.5.1.1',
+    s5ChasStoreGrpIndx => '1.3.6.1.4.1.45.1.6.3.5.1.1.1',
+    s5ChasStoreComIndx => '1.3.6.1.4.1.45.1.6.3.5.1.1.2',
+    s5ChasStoreSubIndx => '1.3.6.1.4.1.45.1.6.3.5.1.1.3',
+    s5ChasStoreIndx => '1.3.6.1.4.1.45.1.6.3.5.1.1.4',
+    s5ChasStoreType => '1.3.6.1.4.1.45.1.6.3.5.1.1.5',
+    s5ChasStoreCurSize => '1.3.6.1.4.1.45.1.6.3.5.1.1.6',
+    s5ChasStoreCntntVer => '1.3.6.1.4.1.45.1.6.3.5.1.1.7',
+    s5ChasStoreFilename => '1.3.6.1.4.1.45.1.6.3.5.1.1.8',
+    s5ChasSm => '1.3.6.1.4.1.45.1.6.3.6',
+    s5ChasSmLeds => '1.3.6.1.4.1.45.1.6.3.6.1',
+    s5ChasSmDateCode => '1.3.6.1.4.1.45.1.6.3.6.2',
+    s5ChasTmpSnr => '1.3.6.1.4.1.45.1.6.3.7',
+    s5ChasTmpSnrTable => '1.3.6.1.4.1.45.1.6.3.7.1',
+    s5ChasTmpSnrEntry => '1.3.6.1.4.1.45.1.6.3.7.1.1',
+    s5ChasTmpSnrGrpIndx => '1.3.6.1.4.1.45.1.6.3.7.1.1.1',
+    s5ChasTmpSnrIndx => '1.3.6.1.4.1.45.1.6.3.7.1.1.2',
+    s5ChasTmpSnrSubIndx => '1.3.6.1.4.1.45.1.6.3.7.1.1.3',
+    s5ChasTmpSnrValue => '1.3.6.1.4.1.45.1.6.3.7.1.1.4',
+    s5ChasTmpSnrTmpValue => '1.3.6.1.4.1.45.1.6.3.7.1.1.5',
     s5ChasUtil => '1.3.6.1.4.1.45.1.6.3.8',
     s5ChasUtilTable => '1.3.6.1.4.1.45.1.6.3.8.1',
     s5ChasUtilEntry => '1.3.6.1.4.1.45.1.6.3.8.1.1',
@@ -6949,6 +7079,17 @@ $Monitoring::GLPlugin::SNMP::mibs_and_oids = {
     s5ChasUtilCPUUsageLast10Seconds => '1.3.6.1.4.1.45.1.6.3.8.1.1.11',
     s5ChasUtilMemoryTotalMB => '1.3.6.1.4.1.45.1.6.3.8.1.1.12',
     s5ChasUtilMemoryAvailableMB => '1.3.6.1.4.1.45.1.6.3.8.1.1.13',
+    s5ChasPs => '1.3.6.1.4.1.45.1.6.3.9',
+    s5ChasPsRpsuTable => '1.3.6.1.4.1.45.1.6.3.9.1',
+    s5ChasPsRpsuEntry => '1.3.6.1.4.1.45.1.6.3.9.1.1',
+    s5ChasPsRpsuGrpIndx => '1.3.6.1.4.1.45.1.6.3.9.1.1.1',
+    s5ChasPsRpsuIndx => '1.3.6.1.4.1.45.1.6.3.9.1.1.2',
+    s5ChasPsRpsuSubIndx => '1.3.6.1.4.1.45.1.6.3.9.1.1.3',
+    s5ChasPsRpsuType => '1.3.6.1.4.1.45.1.6.3.9.1.1.4',
+    s5ChasPsRpsuTypeDefinition => {
+      2 => 'nes',
+      1 => 'bayStack10',
+    },
   },
   'RAPID-CITY-MIB' => {
     rcSysCpuUtil => '1.3.6.1.4.1.2272.1.1.20',
