@@ -71,6 +71,8 @@ EXTRA_MODULES=\
   Classes/Cisco/AsyncOS/Component/EnvironmentalSubsystem.pm \
   Classes/Cisco/AsyncOS.pm \
   Classes/Cisco.pm \
+  Classes/Nortel/S5/Component/EnvironmentalSubsystem.pm \
+  Classes/Nortel/S5/Component/CpuSubsystem.pm \
   Classes/Nortel/S5/Component/MemSubsystem.pm \
   Classes/Nortel/S5.pm \
   Classes/Nortel.pm \
